<resources>
    <string name="app_name">Taskwarrior</string>
    <string name="app_account_type">kvj.task.account</string>
    <string name="pref_account_name">pref_account_name</string>
    <string name="pref_account_id">pref_account_id</string>

    <!-- General -->
    <string name="task_description">Description</string>
    <string name="task_project">Project</string>
    <string name="task_tags">Tags</string>
    <string name="task_due">Due</string>
    <string name="task_wait">Wait until</string>
    <string name="task_scheduled">Scheduled for</string>
    <string name="task_recur">Recurrence</string>
    <string name="task_until">Until</string>
    <string name="task_annotations">Annotations</string>

    <string name="id_format">#%1$s</string>
    <string name="due_format">Due %1$s</string>
    <string name="started_format">Started %1$s</string>
    <string name="wait_format">Waiting until %1$s</string>
    <string name="scheduled_format">Scheduled for %1$s</string>
    <string name="recur_format">Recurs %1$s</string>
    <string name="recur_until_format">Recurs %1$s until %2$s</string>
    <string name="tag_format">#%1$s</string>

    <plurals name="annotation_count">
        <item quantity="one">%d annotation</item>
        <item quantity="other">%d annotations</item>
    </plurals>

    <string name="tag">Tag</string>

    <!-- Actions -->
    <string name="action_edit">Edit</string>
    <string name="action_start">Start work</string>
    <string name="action_stop">Stop work</string>
    <string name="action_done">Mark as done</string>
    <string name="action_annotate">Add annotation</string>
    <string name="action_delete">Delete</string>

    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="reload">Reload</string>
    <string name="create_shortcut">Create shortcut…</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>

    <!-- Notification channels -->
    <string name="channel_sync_ongoing_name">Ongoing syncs</string>
    <string name="channel_sync_ongoing_desc">Notifies when Taskwarrior is synchronizing with a server</string>

    <string name="channel_sync_success_name">Successful syncs</string>
    <string name="channel_sync_success_desc">Notifies when Taskwarrior successfully synchronizes with a server</string>

    <string name="channel_sync_error_name">Sync errors</string>
    <string name="channel_sync_error_desc">Notifies when Taskwarrior fails to synchronize with a server</string>

    <!-- Notifications -->
    <string name="notification_sync_ongoing">Sync in progress</string>
    <string name="notification_sync_success">Sync complete</string>
    <string name="notification_sync_error">Sync failed</string>
    <string name="notification_sync_again">Sync again</string>
    <string name="notification_sync_retry">Retry now</string>

    <!-- Task list activity -->
    <string name="new_task_title">New task</string>
    <string name="filter_hint">Query</string>
    <string name="sync">Sync</string>
    <string name="undo">Undo</string>
    <string name="custom_filter">Custom filter…</string>

    <!-- Main drawer -->
    <string name="add_account">Add account</string>
    <string name="set_account_default">Make default</string>
    <string name="account_options_hint">Account options</string>
    <string name="dark_theme">Dark mode</string>
    <string name="reports">Reports</string>
    <string name="run_command">Run command…</string>
    <string name="settings">Settings</string>
    <string name="share_debug_file">Share debug file</string>

    <!-- Task activity -->
    <string name="remove_tag_dialog_format">Remove tag %1$s?</string>

    <!-- Text editor -->
    <string name="text_editor_title">Taskwarrior text editor</string>
    <string name="text_editor_hint">Text editor</string>
    <string name="error_save_failed">Failed to save file</string>
    <string name="error_read_failed">Failed to read file</string>

    <!-- Task editor -->
    <string name="add_another">Add another</string>
    <string name="edit_task_success">Task edited</string>
    <string name="add_task_success">Task added</string>

    <!-- Form -->
    <string name="form_discard_confirm">There are some changes, discard them?</string>
    <string name="error_no_input">Input is mandatory</string>

    <!-- Custom command dialog -->
    <string name="command_prompt_hint">Arguments</string>
    <string name="run">Run</string>
    <string name="command_result_format">%1$s\n\nErrors:\n%2$s</string>

    <!-- New account dialog -->
    <string name="account_name_hint">Name</string>
    <string name="data_folder">Folder</string>
    <string name="data_new_folder">Create new</string>

    <!-- Annotation dialog -->
    <string name="annotation">Annotation</string>
    <string name="add_annotation">Annotate</string>
    <string name="no_annotations">No annotations</string>

    <!-- Tag dialog -->
    <string name="error_tag_whitespace">Tags must not contian whitespace</string>
</resources>
