<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="#12" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="This is a task description" />
    </LinearLayout>

    <kvj.taskw.ui.IconLabel
        android:id="@+id/due"
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_due" />

    <kvj.taskw.ui.IconLabel
        android:id="@+id/wait"
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_wait" />

    <kvj.taskw.ui.IconLabel
        android:id="@+id/scheduled"
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_scheduled" />

    <kvj.taskw.ui.IconLabel
        android:id="@+id/recur"
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_recur" />

    <kvj.taskw.ui.IconLabel
        android:id="@+id/project"
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_project" />

    <kvj.taskw.ui.IconLabel
        style="@style/TaskProperty"
        android:src="@drawable/ic_label_tags">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/task_tag" />

        <ImageButton
            android:id="@+id/add_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/tag_background"
            android:src="@drawable/ic_action_add" />
    </kvj.taskw.ui.IconLabel>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/task_annotations"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/no_annotations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_annotations" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/annotations"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_one_annotation" />

        <Button
            android:id="@+id/add_annotation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_action_add"
            android:padding="16dp"
            android:text="@string/add_annotation"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
